--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="about-text" data-aos="fade-right">
            <h3>Welcome To Mummy's Corner</h3>
            <p>Afro Restaurant Birmingham is the touch of Ghana situated in the heart of London city. Our restaurant blends a relaxed atmosphere with delicious authentic Ghanaian food achieved by using only the finest and freshest ingredients. Come and enjoy our extensive modern menu of Ghanaian dishes, with imported African beers, tropical cocktails, fine wine and champagne.</p>
-           <p>Bookings can be made throughout lunch and dinner for parties of up to 10 guests. You are also welcome to drop in anytime, and order drinks if you have to wait, or leave your number so we can call you when your seats are ready. Reserve your table now using the button below. You can also contact us on info@afrobirmingham.co.uk or call 0247 700 6427.</p>
+           <p>Bookings can be made throughout lunch and dinner for parties of up to 10 guests. You are also welcome to drop in anytime, and order drinks if you have to wait, or leave your number so we can call you when your seats are ready. Reserve your table now using the button below. You can also contact us on info@afrobirmingham.co.uk or call (+233) 0247 700 6427 or (+44)07878074752.</p>
            <a href="#our-menu" class="btn btn-default">check our menu</a>
         </div>
         <div class="about-img" data-aos="fade-left">
@@ -482,14 +482,14 @@
         <div class="testi-item" data-aos="zoom-in">
           <div class="testi-author">
              <div class="testi-author-name">
-               <h3>raj himachal</h3>
+               <h3>Olivia Wyatt</h3>
                <span>food specialist</span>
              </div>
              <div class="testi-author-img">
                <img src="img/testimonials/1.jpg" alt="testi author img">
              </div>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Food served are very healthy and balabced. Great Job . Keep it up <br></p>
           <div class="ratings">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -501,14 +501,14 @@
         <div class="testi-item" data-aos="zoom-in">
           <div class="testi-author">
              <div class="testi-author-name">
-               <h3>raj himachal</h3>
-               <span>food specialist</span>
+               <h3>Emma </h3>
+               <span>customer</span>
              </div>
              <div class="testi-author-img">
                <img src="img/testimonials/2.jpg" alt="testi author img">
              </div>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Awesome. Very Nice to have dishes from Africa. And it actually unique in it way. I love It</p>
           <div class="ratings">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -520,14 +520,14 @@
         <div class="testi-item" data-aos="zoom-in">
           <div class="testi-author">
              <div class="testi-author-name">
-               <h3>raj himachal</h3>
+               <h3>Kojo Frimpong</h3>
                <span>food specialist</span>
              </div>
              <div class="testi-author-img">
                <img src="img/testimonials/3.jpg" alt="testi author img">
              </div>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>I like my local dish. And I love how you've made it available near me.</p>
           <div class="ratings">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -601,7 +601,7 @@
       </div>
       <div class="row">
         <div class="copyright">
-          &copy; 2022 - Designed by Leslie Asamoah Tannor
+          &copy; 2022 - Designed by Johnny Osei Aidoo
         </div>
       </div>
     </div>
