--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="apple-touch-icon" href="./img/logo.png">
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+  
 </head>
 <body>
 
@@ -519,8 +522,8 @@
         <div class="testi-item" data-aos="zoom-in">
           <div class="testi-author">
              <div class="testi-author-name">
-               <h3>Kojo Frimpong</h3>
-               <span>food specialist</span>
+               <h3>Kofi Addo</h3>
+               <span>customer</span>
              </div>
              <div class="testi-author-img">
                <img src="img/testimonials/3.jpg" alt="testi author img">
