--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.tiktok.com/@moniqueskitchennosize"><i class="fab fa-tiktok"></i></a>
           </div>
         </div>
       </div>
