--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
           <h3>contact us</h3>
           <p> For Collection and Delivery please call: 07878074752 </p>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/people/Obaa-PA-Afia-Christy/pfbid0xUZtts1zn5SrR53CE2KyzR9ek2dM5gaoouXgHv85FxYZog75bGCx5eiKJp1dRi79l/"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
